[package]
authors = ["IWANABETHATGUY <iwanabethatguy@qq.com>"]
edition = "2021"
name = "tjs-language-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
Inflector = "0.11.4"
env_logger = "0.11.5"
log = "0.4"
lsp-text-document = { git = "https://github.com/IWANABETHATGUY/lsp-text-document" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = [
  "io-std",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
  "time",
] }
tree-sitter = "0.24.4"
tree-sitter-typescript = "0.23.2"

crossbeam-channel = "0.5.1"
dashmap = "6.1.0"
tower-lsp = "0.20.0"
streaming-iterator = "0.1.9"
