[package]
authors = ["IWANABETHATGUY <974153916@qq.com>"]
edition = "2018"
name = "tjs-language-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
Inflector = "0.11.4"
env_logger = "0.8.1"
log = "0.4"
lsp-text-document = { git = "https://github.com/IWANABETHATGUY/lsp-text-document" }
lspower = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.3", features = [
    "io-std",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time"
] }
tree-sitter = "0.20.0"
treesitter-ts = { path = "../treesitter-ts" }
